bug fix for alignment on sub section

--- a/styles/subscribe.module.scss
+++ b/styles/subscribe.module.scss
@@ -22,7 +22,6 @@
 
   &__formBox {
     padding-left: 0.375em;
-    // width: 90%;
     height: 2.7rem;
     display: flex;
     border-radius: 1px;
@@ -33,6 +32,7 @@
     }
 
     @include mobileSmall {
+      width: 18em !important;
       margin-bottom: 0.5em;
     }
 
@@ -43,15 +43,13 @@
       background: $lightGrey;
       width: inherit;
       font-weight: 400;
-
-      @include mobileLarge {
-        width: 25em;
-      }
+    }
+    @include mobileLarge {
+      width: 25em;
     }
   }
 
   button {
-    width: 20.375em;
     color: $white;
     height: 2.7rem;
     padding: 0.6em 0.9em;
@@ -77,7 +75,10 @@
     }
 
     @include mobileLarge {
-      width: 25.375em;
+      width: 100%;
+    }
+
+    @include mobileSmall {
     }
   }
 }
